# slenps

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: ecluster_example.ipynb  eclusters_example.ipynb  sample_documents.txt  test.py
slenps/: __init__.py  utils.py  version.py
slenps/eclusters/: __init__.py  base.py  cluster.py  embedding.py  embedding_models.py
